[refactor] Address PR #6207 review feedback from @line-o and @reinhapa
Fix correctness bug: seconds in IETF date parsing must be 2 digits per
the XPath spec EBNF (seconds ::= digit digit ("." digit+)?). Deduplicate
resolveAgainstBaseUri (centralized in DocUtils), duration validation
(shared method in FunMin), and Unicode codepoint comparison (extracted
in Collations). Restructure XQuerySerializer JSON conditional per
line-o's suggestion. Apply Java modernization: switch expressions, text
blocks, Path.of(), StandardCharsets, static imports.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>